[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/script/launcher/Title.gd" type="Script" id=1]
[ext_resource path="res://game/asset/graphic/backgrounds/background.png" type="Texture" id=2]

[node name="Title" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 351.618, 450.071 )
motion_scale = Vector2( 0.8, 1 )
motion_mirroring = Vector2( 700, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1571.69, 0 )
scale = Vector2( 0.550945, 1 )
texture = ExtResource( 2 )
vframes = 5
region_enabled = true
region_rect = Rect2( 0, 0, 7000, 1500 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 351.618, 450.071 )
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 700, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 1569.19, 0 )
scale = Vector2( 0.55166, 1 )
texture = ExtResource( 2 )
vframes = 5
frame = 1
region_enabled = true
region_rect = Rect2( 0, 0, 7000, 1500 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 351.618, 450.071 )
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 700, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 1571.69, 0 )
scale = Vector2( 0.550945, 1 )
texture = ExtResource( 2 )
vframes = 5
frame = 2
region_enabled = true
region_rect = Rect2( 0, 0, 7000, 1500 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 351.618, 450.071 )
motion_scale = Vector2( 0.4, 1 )
motion_mirroring = Vector2( 700, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
visible = false
texture = ExtResource( 2 )
vframes = 5
frame = 3
region_enabled = true
region_rect = Rect2( 0, 0, 7000, 1500 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 351.618, 450.071 )
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 700, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 1571.69, 0 )
scale = Vector2( 0.550945, 1 )
texture = ExtResource( 2 )
vframes = 5
frame = 4
region_enabled = true
region_rect = Rect2( 0, 0, 7000, 1500 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="Button_start" type="Button" parent="Control/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -10.0
margin_right = 40.0
margin_bottom = 10.0
text = "Jouer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_option" type="Button" parent="Control/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0
text = "Option"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_option2" type="Button" parent="Control/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 50.0
margin_right = 40.0
margin_bottom = 70.0
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_quitter" type="Button" parent="Control/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 80.0
margin_right = 40.0
margin_bottom = 100.0
text = "Quitter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 510, 300.071 )
current = true
[connection signal="pressed" from="Control/CanvasLayer/Button_start" to="." method="_on_Button_start_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Button_option" to="." method="_on_Button_option_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Button_option2" to="." method="_on_Button_option_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Button_quitter" to="." method="_on_Button_quitter_pressed"]
